data/derived/comb/progs/unify/prog5110.ml.out
Characters 85-88:
  | h::t -> h + digitalRoot (digits(t));;
                                   ^^^
Error: This expression has type int list
       but an expression was expected of type int
